fix float-wrapping issue

--- a/content/assets/css/styles.scss
+++ b/content/assets/css/styles.scss
@@ -329,6 +329,7 @@ a.inverted {
   font-size: 16px;
   min-width: 130px;
   margin: 5px;
+  height: 135px;
   
   .header {
     text-align: left;
